select hobby thingy now works

--- a/CA1/src/main/webapp/index.html
+++ b/CA1/src/main/webapp/index.html
@@ -24,7 +24,7 @@
                 <div class="col-12">
                     <div id="search_container">
                         <form>
-                            <select>
+                            <select id="hobbySelect">
                                 <option>Sort on hobbies...</option>
                             </select>
 
