--- a/CA1/src/main/webapp/index.html
+++ b/CA1/src/main/webapp/index.html
@@ -36,7 +36,7 @@
 
                             -
 
-                            <input type="number" value="0"><button class="btn btn-secondary">Sort on employee count</button>
+                            <input type="number" value="0" id="field_emp_count"><input type="button" class="btn btn-secondary" id="emp_by_count" value="At least employee count">
 
                             - 
 
