--- a/CA1/src/main/webapp/documentation.html
+++ b/CA1/src/main/webapp/documentation.html
@@ -27,7 +27,7 @@
                     <hr>
                     <p>GIT repository: <a href="https://github.com/Benjaminlrasmussen/CA1.git" target="_blank">https://github.com/Benjaminlrasmussen/CA1.git</a></p>
                     <hr>
-                    <p>Production / Live: <a href="" target="_blank">URL here...</a></p>
+                    <p>Production / Live: <a href="/CA1/" target="_blank">http://165.227.151.92:8080/CA1/</a></p>
                     <hr>
                     <p>Who made what?:</p>
                     <ul>
